--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   <title>Webpack Boilerplate</title>
 
-<link href="/styles/main.587981eb88a586a77d7b.css" rel="stylesheet"></head>
+<link href="./styles/main.587981eb88a586a77d7b.css" rel="stylesheet"></head>
 
 <body>
 
   <div id="root"></div>
 
-<script type="text/javascript" src="/main.5a2bc0261f86c4e77c30.bundle.js"></script></body>
+<script type="text/javascript" src="./main.dd7b6452e2b1d4b1851d.bundle.js"></script></body>
 
 </html>
