bunch of exercises with an overview

--- a/src/template.html
+++ b/src/template.html
@@ -6,13 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet">
   <title><%= htmlWebpackPlugin.options.title %></title>
 
 </head>
 
 <body>
+  <main class="main">
+    <h1 class="title">Creative Coding Exercises</h1>
+    <ul class="sketch-list" data-sketch-list>
 
-  <div id="root"></div>
+    </ul>
+  </main>
+  <div class="sketch-overlay">
+    <button class="sketch-overlay__close" data-sketch-close></button>
+    <div class="sketch-overlay__wrapper" data-sketch-wrapper></div>
+  </div>
 
 </body>
 
