--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet">
   <title>Webpack Boilerplate</title>
 
-<link href="./styles/main.587981eb88a586a77d7b.css" rel="stylesheet"></head>
+<link href="./styles/main.01aff1daf634fa5c2210.css" rel="stylesheet"></head>
 
 <body>
+  <main class="main">
+    <h1 class="title">Creative Coding Exercises</h1>
+    <ul class="sketch-list" data-sketch-list>
 
-  <div id="root"></div>
+    </ul>
+  </main>
+  <div class="sketch-overlay">
+    <button class="sketch-overlay__close" data-sketch-close></button>
+    <div class="sketch-overlay__wrapper" data-sketch-wrapper></div>
+  </div>
 
-<script type="text/javascript" src="./main.dd7b6452e2b1d4b1851d.bundle.js"></script></body>
+<script type="text/javascript" src="./main.7f2e8ec4122b77ed5d69.bundle.js"></script></body>
 
 </html>
