--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet">
-  <title>Webpack Boilerplate</title>
+  <title>Creative Coding Exercises</title>
 
 <link href="./styles/main.01aff1daf634fa5c2210.css" rel="stylesheet"></head>
 
@@ -23,6 +23,6 @@
     <div class="sketch-overlay__wrapper" data-sketch-wrapper></div>
   </div>
 
-<script type="text/javascript" src="./main.7f2e8ec4122b77ed5d69.bundle.js"></script></body>
+<script type="text/javascript" src="./main.d1c02173c398a19269de.bundle.js"></script></body>
 
 </html>
